Bug 82260 - Font dropdown crash
Summary: Font dropdown crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: Other All
: medium normal
Assignee: Matthew Francis
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-06 18:07 UTC by Matthew Francis
Modified: 2016-04-05 13:50 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace (84.29 KB, text/plain)
2014-08-06 18:08 UTC, Matthew Francis
Details
Backtrace (4.4 master) (80.34 KB, text/plain)
2014-08-18 13:56 UTC, Matthew Francis
Details
Possible solution (patch) (762 bytes, patch)
2014-08-19 07:36 UTC, Matthew Francis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Francis 2014-08-06 18:07:32 UTC
Observed on OSX 10.9.4 / LO 4.3.0.4:

I can't reproduce this reliably but I have observed the following crash twice. When randomly fiddling with the font dropdown, including selecting, copying and pasting text within the dropdown and the document, and scrolling the dropdown with the mouse, Writer eventually crashes with the attached backtrace.
Comment 1 Matthew Francis 2014-08-06 18:08:00 UTC
Created attachment 104170 [details]
Backtrace
Comment 2 Maxim Monastirsky 2014-08-06 18:44:37 UTC
Hi,

This backtrace is similar to the one from rhbz#1121254 (I put a link in 'See Also'), which is fixed for 4.3.1 [1]. So let's assume for now that it's fixed, but feel free to reopen the bug in case it will crash also in 4.3.1.

[1] http://cgit.freedesktop.org/libreoffice/core/commit/?id=5f955c65e253d72bff91b7f38bca62f2fcf25f4f&h=libreoffice-4-3
Comment 3 Matthew Francis 2014-08-07 02:50:40 UTC
Thanks

The linked fix appears to relate to the case that the available fonts change while LO is open. Although the backtraces are similar, I don't see that I was doing anything that could have caused this to happen, so I will keep an eye open after the next update
Comment 4 Matthew Francis 2014-08-18 13:56:40 UTC
Created attachment 104826 [details]
Backtrace (4.4 master)

Just got an essentially identical backtrace from 4.4 master, so unfortunately it seems this one is still present

No chance anything was changing the system fonts while this was happening
Comment 5 Maxim Monastirsky 2014-08-18 13:58:59 UTC
OK, so back to UNCONFIRMED.
Comment 6 Matthew Francis 2014-08-19 05:50:33 UTC
Figured out how to reproduce the crash locally. This works one in every two or three times.

Two screens are required

From a fresh start of 4.4 master:
1. Open a Writer window
2. Drag the Writer window to another screen
3. Open the font dropdown
Comment 7 Matthew Francis 2014-08-19 07:36:19 UTC
Created attachment 104865 [details]
Possible solution (patch)

Analogously to the previously referenced patch, could the solution to this just possibly be the attached?

The DataChangedEvent DATACHANGED_DISPLAY event is sent when the window is dragged between screens (on recent OSX, the default is that screens are isolated). If the font list also ends up destroyed when this happens, that would explain the crash.

It's hard to say for certain when the above reproduction steps aren't 100% reliable to begin with, but I can't reproduce it any more with this patch applied.
Comment 8 Commit Notification 2014-08-25 10:29:34 UTC
Matthew J. Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=edc52015c30dd58b4c79fb2642df3d1f1996d8b0

fdo#82260 Fix OS X font dropdown crash



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.