fdo#82260 Fix OS X font dropdown crash

Without this, font dropdowns intermittently crash after a window
is moved to another screen

Change-Id: I1af5d8224fd164b73c43a9655fbde364f530c979