svx/source/tbxctrls/tbcontrl.cxx
@@ -883,7 +883,8 @@ void SvxFontNameBox_Impl::DataChanged( const DataChangedEvent& rDCEvt )
         Size aDropSize( aLogicalSize.Width(), LOGICAL_EDIT_HEIGHT);
         SetDropDownSizePixel(LogicToPixel(aDropSize, MAP_APPFONT));
     }
-    else if ( rDCEvt.GetType() == DATACHANGED_FONTS )
+    else if ( ( rDCEvt.GetType() == DATACHANGED_FONTS ) ||
+              ( rDCEvt.GetType() == DATACHANGED_DISPLAY ) )
     {
         // The old font list in shell has likely been destroyed at this point, so we need to get
         // the new one before doing anything further.
